<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ /* ******************************************************************************
  ~  *
  ~  *
  ~  * This program and the accompanying materials are made available under the
  ~  * terms of the Apache License, Version 2.0 which is available at
  ~  * https://www.apache.org/licenses/LICENSE-2.0.
  ~  *
  ~  *  See the NOTICE file distributed with this work for additional
  ~  *  information regarding copyright ownership.
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~  * License for the specific language governing permissions and limitations
  ~  * under the License.
  ~  *
  ~  * SPDX-License-Identifier: Apache-2.0
  ~  ******************************************************************************/
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.eclipse.deeplearning4j</groupId>
        <artifactId>nd4j</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>samediff-llm</artifactId>
    <packaging>jar</packaging>

    <name>samediff-llm</name>
    <description>Large Language Model support for SameDiff - tokenizers, text generation, and fine-tuning</description>

    <dependencies>
        <!-- ND4J API -->
        <dependency>
            <groupId>org.eclipse.deeplearning4j</groupId>
            <artifactId>nd4j-api</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- ONNX import for model loading -->
        <dependency>
            <groupId>org.eclipse.deeplearning4j</groupId>
            <artifactId>samediff-import-onnx</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Jackson for JSON config parsing -->
        <dependency>
            <groupId>org.eclipse.deeplearning4j</groupId>
            <artifactId>jackson</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Native HuggingFace tokenizers library (Rust-based) - required for HuggingFaceTokenizer -->
        <dependency>
            <groupId>org.eclipse.deeplearning4j</groupId>
            <artifactId>tokenizers-native</artifactId>
            <version>${project.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Profile for GGML/GGUF support -->
        <profile>
            <id>ggml</id>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.deeplearning4j</groupId>
                    <artifactId>nd4j-ggml</artifactId>
                    <version>${project.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

</project>
